--- a/i-theme/scss/base.scss
+++ b/i-theme/scss/base.scss
@@ -8,12 +8,14 @@ h1 {
   font-size: 20pt;
   line-height: 1.5;
   text-align: left;
+  color: blue;
 }
 
 h2 {
   margin: 8pt auto 4pt;
   font-size: 14pt;
-
+  color: blue;
+  
   &:before {
     font-size: 14pt;
   }
@@ -22,7 +24,8 @@ h2 {
 h3 {
   margin: 4pt auto 2pt;
   font-size: 12pt;
-
+  color: blue;
+  
   &:before {
     font-size: 12pt;
   }
@@ -31,6 +34,7 @@ h3 {
 h4 {
   margin: 4pt auto 2pt;
   font-size: 10pt;
+  color: blue;
 
   &:before {
     font-size: 10pt;
