--- a/i-theme/scss/variables.scss
+++ b/i-theme/scss/variables.scss
@@ -14,22 +14,22 @@ $nonbre-font-family: $font-serif;
 $page-width: 210mm;
 $page-height: 297mm;
 
-$page-margin-top: 25mm;
-$page-margin-bottom: 25mm;
-$page-margin-left: 20mm;
-$page-margin-right: 20mm;
+$page-margin-top: 38.75mm;
+$page-margin-bottom: 24.25mm;
+$page-margin-left: 21mm;
+$page-margin-right: 21mm;
 
 // Size
-$body-font-size: 10pt;
-$nonbre-font-size: 9pt;
-$body-line-height: 1.8;
+$body-font-size: 3.5mm;
+$nonbre-font-size: 3mm;
+$body-line-height: 6mm;
 $img-max-width: 10cm;
 $img-max-height: 8cm;
-$page-header-font-size: 10pt;
-$page-footer-font-size: 10pt;
+$page-header-font-size: 2.5mm;
+$page-footer-font-size: 2.5mm;
 
 // Page Header, Footer
-$page-top-left: "vivliostyle-theme-academic のサンプル";
+$page-top-left: "210326 OBAMJ Feature Article";
 $page-top-right: "";
 $page-bottom-left: "";
 $page-bottom-right: "";
