--- a/i-theme/theme.css
+++ b/i-theme/theme.css
@@ -163,7 +163,6 @@ body {
 }
 
 h1 {
-  margin: 8pt auto 4pt;
   column-span: all;
   background: red;
   font-size: 10mm;
@@ -172,7 +171,6 @@ h1 {
 }
 
 h2 {
-  margin: 8pt auto 4pt;
   column-span: all;
   font-size: 6mm;
   line-height: 2;
@@ -182,7 +180,6 @@ h2:before {
 }
 
 h3 {
-  margin: 4pt auto 2pt;
   font-size: 4.5mm;
   line-height: 2;
   color: blue;
@@ -192,7 +189,6 @@ h3:before {
 }
 
 h4 {
-  margin: 4pt auto 2pt;
   font-size: 10pt;
   color: blue;
 }
@@ -347,7 +343,7 @@ ul.nostyle {
 p {
   margin: 0;
   text-align: justify;
-  text-indent: 1em;
+  text-indent: 1rem;
 }
 
 strong {
